#2 fix for missing september dot on mobile

--- a/assets/src/css/scss/_timeline.scss
+++ b/assets/src/css/scss/_timeline.scss
@@ -893,7 +893,7 @@
     &.tml__milestone_6 {
       top: 25px;
 
-      &:before {
+      &:after {
         top: 16px;
       }
 
